--- a/composer.json
+++ b/composer.json
@@ -1,9 +1,12 @@
 {
-  "name": "youngdev-workshop",
+  "name": "kittinandev/youngdev-workshop",
   "version": "1.0.0",
   "description": "Interactive PHP Workshop Platform - Slide Based Learning",
-  "main": "index.php",
+  "main": "public/index.php",
   "keywords": ["workshop", "slides", "php", "learning"],
   "author": "YoungDev Team",
-  "license": "MIT"
+  "license": "MIT",
+  "require": {
+    "php": ">=7.4"
+  }
 }
