--- a/composer.json
+++ b/composer.json
@@ -2,11 +2,28 @@
   "name": "kittinandev/youngdev-workshop",
   "version": "1.0.0",
   "description": "Interactive PHP Workshop Platform - Slide Based Learning",
-  "main": "public/index.php",
-  "keywords": ["workshop", "slides", "php", "learning"],
+  "keywords": ["workshop", "slides", "php", "learning", "laravel"],
   "author": "YoungDev Team",
   "license": "MIT",
   "require": {
-    "php": ">=7.4"
-  }
+    "php": ">=8.2",
+    "laravel/framework": "^12.0"
+  },
+  "require-dev": {
+    "laravel/tinker": "^2.9"
+  },
+  "autoload": {
+    "psr-4": {
+      "App\\": "app/",
+      "Database\\Factories\\": "database/factories/",
+      "Database\\Seeders\\": "database/seeders/"
+    }
+  },
+  "scripts": {
+    "post-install-cmd": [
+      "@php artisan key:generate --force"
+    ]
+  },
+  "minimum-stability": "stable",
+  "prefer-stable": true
 }
